--- a/settings.json
+++ b/settings.json
@@ -32,7 +32,7 @@
 
     // parameters for motion estimation
     "motionEstimation":{
-        "max_motion_distance": 100, // um. Unit pairs with distance larger than this value in Y direction will not be included for motion estimation 
+        "max_distance": 100, // um. Unit pairs with distance larger than this value in Y direction will not be included for motion estimation 
         "features": ["Waveform", "AutoCorr", "PETH"], // features used for motion estimation. Choose from "Waveform", "AutoCorr", "ISI", "PETH" 
         "n_iter": 10 // number of iterations for the clustering algorithm
     },
