--- a/settings.json
+++ b/settings.json
@@ -13,7 +13,6 @@
     
     // parameters for waveform correction
     "waveformCorrection":{
-        "interpolate_algorithm": "Krig", 
         "n_nearest_channels": 38 // number of channels used for similarity calculation 
     },
 
@@ -32,8 +31,10 @@
 
     // parameters for motion estimation
     "motionEstimation":{
-        "max_distance": 100, // um. Unit pairs with distance larger than this value in Y direction will not be included for motion estimation 
-        "features": ["Waveform", "AutoCorr", "PETH"], // features used for motion estimation. Choose from "Waveform", "AutoCorr", "ISI", "PETH" 
+        "features": [
+            ["Waveform", "AutoCorr", "PETH"],
+            ["Waveform", "AutoCorr", "PETH"]
+        ], // features used for motion estimation each iteration. Choose from "Waveform", "AutoCorr", "ISI", "PETH"
         "n_iter": 10 // number of iterations for the clustering algorithm
     },
 
