--- a/settings.json
+++ b/settings.json
@@ -40,8 +40,7 @@
             ["AutoCorr", "PETH"],
             ["Waveform", "AutoCorr", "PETH"],
             ["Waveform", "AutoCorr", "PETH"]
-        ], // features used for motion estimation each iteration. Choose from "Waveform", "AutoCorr", "ISI", "PETH"
-        "n_iter": 10 // number of iterations for the clustering algorithm
+        ] // features used for motion estimation each iteration. Choose from "Waveform", "AutoCorr", "ISI", "PETH"
     },
 
     // parameters for clustering
