--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     // please change the following paths to your own paths
     "path_to_data": "path\\to\\data", // path to data
-    "output_folder": ".\\kilomatchOutput", // output folder
+    "output_folder": ".\\DANT_Output", // output folder
     "save_intermediate_results": true, // whether to save the intermediate results 
     "n_jobs": -1, // number of jobs to run in parallel. -1 means using all processors
 
